add JavaFX dependencies and plugin